--- a/.github/workflows/opwrt.yml
+++ b/.github/workflows/opwrt.yml
@@ -141,7 +141,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt-x86_64-k6.12.x${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt-x86_64-k6.12${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
 
     - name: 创建发布标签
@@ -150,7 +150,7 @@ jobs:
       run: |
         echo "release_tag=${{ env.TAG_TIME }}" >> $GITHUB_OUTPUT
         touch release.txt
-        echo "OpenWrt-x86_64-k6.12.x（ipv6）" >> release.txt
+        echo "OpenWrt-x86_64-k6.12（ipv6）" >> release.txt
         echo "地址：192.168.2.1" >> release.txt
         echo "密码：无密码" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
@@ -161,7 +161,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       with:
-        name: ${{ env.FILE_TIME }} 内核6.12.x 版本
+        name: ${{ env.FILE_TIME }} 内核6.12 版本
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/* 
