--- a/.github/workflows/opwrt.yml
+++ b/.github/workflows/opwrt.yml
@@ -1,17 +1,17 @@
-name:  OpWrt-x86_64-k6.12.x
+name:  OpenWrt-x86_64-k6.12
 
 on: 
   workflow_dispatch:
-  # schedule:
-  #  - cron: 29 00 * * 5
+#  schedule:
+#    - cron: 20 00 * * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
-  DIY_P1_SH: diy-1.sh
-  DIY_P2_SH: diy-2.sh
+  DIY_P1_SH: DIY-1.sh
+  DIY_P2_SH: DIY-2.sh
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
@@ -81,7 +81,7 @@ jobs:
     - name: 更新外部插件
       run: cd openwrt && ./scripts/feeds update -a
 
-    - name: 安装外部插件
+    - name: 读取外部插件
       run: cd openwrt && ./scripts/feeds install -a
 
     - name: 加载个人设置
@@ -141,7 +141,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt-x86_64-k6.12${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt-x86_64${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
 
     - name: 创建发布标签
@@ -150,9 +150,9 @@ jobs:
       run: |
         echo "release_tag=${{ env.TAG_TIME }}" >> $GITHUB_OUTPUT
         touch release.txt
-        echo "OpenWrt-x86_64-k6.12（ipv6）" >> release.txt
-        echo "地址：192.168.2.1" >> release.txt
-        echo "密码：无密码" >> release.txt
+        echo "OpenWrt-X86_64-6.12（支持ipv6）" >> release.txt
+        echo "管理地址：192.168.2.1" >> release.txt
+        echo "默认密码：无密码" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: 发布新版固件
@@ -161,7 +161,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       with:
-        name: ${{ env.FILE_TIME }} 内核6.12 版本
+        name: ${{ env.FILE_TIME }} -OpenWrt-x86_64-6.12
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/* 
