--- a/.github/workflows/opwrt.yml
+++ b/.github/workflows/opwrt.yml
@@ -46,6 +46,7 @@ jobs:
         echo "硬盘数量: $(ls /dev/sd* | grep -v [1-9] | wc -l)" && df -hT
     - name: 安装并启动 Docker 插件
       run: |
+        sudo apt-get remove containerd containerd.io -y
         sudo apt-get update
         sudo apt-get install -y docker.io
         sudo systemctl start docker
@@ -113,20 +114,25 @@ jobs:
       id: organize
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
-        cd openwrt/bin/targets/*/*
-        rm -rf packages && mkdir packages
-        find -name "*esxi-flat.vmdk*" | xargs -i mv -f {} packages
-        find -name "*kernel.bin*" | xargs -i mv -f {} packages
-        find -name "*rootfs*" | xargs -i mv -f {} packages
-        find -name "*.manifest*" | xargs -i mv -f {} packages
-        find -name "*vmlinuz*" | xargs -i mv -f {} packages
-        find -name "*esxi.vmdk*" | xargs -i mv -f {} packages
-        find -name "*buildinfo*" | xargs -i mv -f {} packages
-        find -name "*json*" | xargs -i mv -f {} packages
-        find -name "*sha256sums*" | xargs -i mv -f {} packages
-        rm -rf packages
-        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "status=success" >> $GITHUB_OUTPUT
+        if [ -d openwrt/bin/targets ]; then
+          cd openwrt/bin/targets/*/*
+          rm -rf packages && mkdir packages
+          find -name "*esxi-flat.vmdk*" | xargs -i mv -f {} packages
+          find -name "*kernel.bin*" | xargs -i mv -f {} packages
+          find -name "*rootfs*" | xargs -i mv -f {} packages
+          find -name "*.manifest*" | xargs -i mv -f {} packages
+          find -name "*vmlinuz*" | xargs -i mv -f {} packages
+          find -name "*esxi.vmdk*" | xargs -i mv -f {} packages
+          find -name "*buildinfo*" | xargs -i mv -f {} packages
+          find -name "*json*" | xargs -i mv -f {} packages
+          find -name "*sha256sums*" | xargs -i mv -f {} packages
+          rm -rf packages
+          echo "FIRMWARE=$PWD" >> $GITHUB_ENV
+          echo "status=success" >> $GITHUB_OUTPUT
+        else
+          echo "固件输出路径不存在，编译可能失败"
+          exit 1
+        fi
     - name: 打包上传固件
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
@@ -138,6 +144,10 @@ jobs:
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
         echo "release_tag=${{ env.TAG_TIME }}" >> $GITHUB_OUTPUT
+        if [ -z "${{ env.TAG_TIME }}" ]; then
+          echo "错误：TAG_TIME 变量为空"
+          exit 1
+        fi
         touch release.txt
         echo "OpenWrt-X86_64-6.12（支持ipv6）" >> release.txt
         echo "管理地址：192.168.2.1" >> release.txt
