--- a/.github/workflows/opwrt_2.yml
+++ b/.github/workflows/opwrt_2.yml
@@ -1,4 +1,4 @@
-name:  OpenWrt-x86_64-6.12-新版luci
+name:  OpenWrt-x86_64-6.12 新版luci
 
 on: 
   workflow_dispatch:
@@ -150,8 +150,8 @@ jobs:
       run: |
         echo "release_tag=${{ env.TAG_TIME }}" >> $GITHUB_OUTPUT
         touch release.txt
-        echo "OpenWrt-X86_64-6.12_new（支持ipv6）" >> release.txt
-        echo "管理地址：192.168.2.1" >> release.txt
+        echo "OpenWrt-X86_64-6.12 新版luci（支持ipv6）" >> release.txt
+        echo "管理地址：192.168.1.1" >> release.txt
         echo "默认密码：无密码" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
 
@@ -161,7 +161,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       with:
-        name: ${{ env.FILE_TIME }} -OpenWrt-x86_64-6.12_new
+        name: ${{ env.FILE_TIME }} -OpenWrt-x86_64-6.12 新版luci
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/* 
