--- a/.github/workflows/opwrt.yml
+++ b/.github/workflows/opwrt.yml
@@ -161,7 +161,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       with:
-        name: ${{ env.FILE_TIME }} -OpenWrt-x86_64-6.12 旧版luci
+        name: ${{ env.FILE_TIME }} OpenWrt-x86_64-6.12 旧版luci
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/* 
